fix(JSONWorker): Disable JSONWorker, for possible building
Need write later fixes for JSONWorker

--- a/joystick/CMakeLists.txt
+++ b/joystick/CMakeLists.txt
@@ -2,15 +2,13 @@ cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 
 project(JoystickHandler LANGUAGES C CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
-
-#find_package(Qt5 CONFIG REQUIRED COMPONENTS Core Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(JOYSTICK_SOURCES
     v_joystick_adapter.cpp     v_joystick_adapter.h
@@ -27,6 +25,6 @@ add_library(JoystickHandler
             ${JOYSTICK_SOURCES}
            )
 
-target_link_libraries(JoystickHandler Qt${QT_VERSION_MAJOR}::Core
+target_link_libraries(JoystickHandler PRIVATE
                                       Qt${QT_VERSION_MAJOR}::Widgets
                                   )
