build(CMakeLists): Fixed many bugs in CMake files

--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -7,11 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
-
-find_package( OpenCV REQUIRED )
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+#find_package( OpenCV REQUIRED )
+#include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 set(CAMERA_SOURCES
     calibrator.cpp           calibrator.h
@@ -28,7 +25,6 @@ add_library(${PROJECT_NAME}
            )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-                    Qt${QT_VERSION_MAJOR}::Core
                     Qt${QT_VERSION_MAJOR}::Widgets
                     ${OpenCV_LIBS}
                 )
