--- a/joystick/CMakeLists.txt
+++ b/joystick/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 get_directory_property(IS_SUBPROJECT PARENT_DIRECTORY)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
+#find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Widgets)
+#find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 
 set(JOYSTICK_SOURCES
     v_joystick_adapter.cpp     v_joystick_adapter.h
@@ -21,11 +21,11 @@ set(JOYSTICK_SOURCES
 )
 
 add_library(${PROJECT_NAME}
-            SHARED
+            STATIC
             ${JOYSTICK_SOURCES}
            )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-                                      Qt${QT_VERSION_MAJOR}::Core
-                                      Qt${QT_VERSION_MAJOR}::Widgets
-                                  )
+            Qt${QT_VERSION_MAJOR}::Core
+            Qt${QT_VERSION_MAJOR}::Widgets
+           )
