--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
 #             release: false
 
       - name: '${{ matrix.icon }} Setup MSYS2'
+      - uses: msys2/setup-msys2@v2
         with:
           msystem: ${{matrix.sys}}
           update: true
