--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,12 @@ jobs:
 #         run: |
 #           cmake -G Ninja -B build -DCMAKE_BUILD_TYPE=Release
 #           cmake --build build
-          
+        
+      - name: Setup gRPC
+        uses: eWaterCycle/setup-grpc@v5
+        with:
+          grpc-version: 1.51.1
+    
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
