--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         
       - name: Setup vcpkg (it does not install any package yet)
         uses: lukka/run-vcpkg@v11
-        #with:
+        with:
           # This is the default location of the directory containing vcpkg sources.
           # Change it to the right location if needed.
-          # vcpkgDirectory: '${{ github.workspace }}/vcpkg'
+          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
 
           # If not using a submodule for vcpkg sources, this specifies which commit
           # id must be checkout from a Git repo. 
