--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,31 +21,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-        
-      - name: Setup vcpkg (it does not install any package yet)
-        uses: lukka/run-vcpkg@v11
-        with:
-          # This is the default location of the directory containing vcpkg sources.
-          # Change it to the right location if needed.
-          vcpkgDirectory: '${{ github.workspace }}/vcpkg'
-
-          # If not using a submodule for vcpkg sources, this specifies which commit
-          # id must be checkout from a Git repo. 
-          # Note: it must not be set if using a Git submodule for vcpkg.
-          # vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
-
-          # This is the glob expression used to locate the vcpkg.json. 
-          # Change it to match a single manifest file you want to use.
-          # Note: do not use `${{ github.context }}` to compose the value as it
-          # contains backslashes that would be misinterpreted. Instead
-          # compose a value relative to the root of the repository using
-          # `**/path/from/root/of/repo/to/vcpkg.json` to match the desired `vcpkg.json`.
-          # vcpkgJsonGlob: '**/vcpkg.json'
-
-          # This is only needed if the command `vcpkg install` must run at this step.
-          # Instead it is highly suggested to let `run-cmake` to run vcpkg later on
-          # using the vcpkg.cmake toolchain. The default is `false`.
-          # runVcpkgInstall: true
   
       - name: 'Setup MSYS2'
         uses: msys2/setup-msys2@v2
@@ -65,6 +40,12 @@ jobs:
 #         run: |
 #           cmake -G Ninja -B build -DCMAKE_BUILD_TYPE=Release
 #           cmake --build build
+                
+      - name: Setup vcpkg
+        run: git clone https://github.com/Microsoft/vcpkg.git ${{github.workspace}}/vcpkg
+        
+      - name: Bootstrap vcpkg
+        run: ${{github.workspace}}/vcpkg/bootstrap-vcpkg.sh
         
       - name: Setup OpenCV
         run: vcpkg install opencv
