--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ env:
 jobs:
   build:
     runs-on: windows-latest
-    defaults:
-        run:
-            shell: msys2 {0}
+#     defaults:
+#         run:
+#             shell: msys2 {0}
 
     steps:
       - name: '🧰 Checkout'
