--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,25 +23,25 @@ jobs:
           fetch-depth: 0
   
       - name: Setup vcpkg
-        run: git clone https://github.com/Microsoft/vcpkg.git
+        run: git clone https://github.com/Microsoft/vcpkg.git ${{github.workspace}}/vcpkg
         
       - name: Bootstrap vcpkg
-        run: ./vcpkg/bootstrap-vcpkg.sh
+        run: ${{github.workspace}}/vcpkg/bootstrap-vcpkg.sh
                 
       - name: Setup libconfig
-        run: vcpkg/vcpkg install libconfig --clean-after-build
+        run: ${{github.workspace}}/vcpkg/vcpkg install libconfig --clean-after-build
         
       - name: Setup gRPC
-        run: vcpkg/vcpkg install grpc --clean-after-build
+        run: ${{github.workspace}}/vcpkg/vcpkg install grpc --clean-after-build
         
       - name: Setup OpenCV
-        run: vcpkg/vcpkg install opencv --clean-after-build
+        run: ${{github.workspace}}/vcpkg/vcpkg install opencv --clean-after-build
         
       - name: Setup Qt5
-        run: vcpkg/vcpkg install qt5 --clean-after-build
+        run: ${{github.workspace}}/vcpkg/vcpkg install qt5 --clean-after-build
         
       - name: Setup SDL2
-        run: vcpkg/vcpkg install sdl2 --clean-after-build
+        run: ${{github.workspace}}/vcpkg/vcpkg install sdl2 --clean-after-build
         
 #       - name: 'Setup MSYS2'
 #         uses: msys2/setup-msys2@v2
