--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       - name: 'Setup MSYS2'
         uses: msys2/setup-msys2@v2
         with:
+          location: D:\
           msystem: mingw64
           update: true
           install: >-
