--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,10 +45,13 @@ jobs:
             qt5-translations:p
             
       - name: Dir
-        run: dir D:\msys64\usr\lib
+        run: dir D:\msys64\
         
       - name: Dir m
-        run: dir D:\msys64\usr\local\lib
+        run: dir D:\msys64\mingw32
+        
+      - name: Dir w
+        run: dir D:\msys64\mingw64
 
 #       - name: '🚧 Build TOOL'
 #         run: |
