--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         run: dir D:\msys64\mingw64\lib
         
       - name: Dir w
-        run: dir D:\msys64\mingw64\x86_64-w64-mingw32
+        run: dir D:\msys64\mingw64\x86_64-w64-mingw32\lib
 
 #       - name: '🚧 Build TOOL'
 #         run: |
@@ -86,7 +86,7 @@ jobs:
 
       - name: Configure CMake
         env:
-          CMAKE_PREFIX_PATH: D:\msys64\mingw64\
+          CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib
         run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
 
       - name: Build
