--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
             opencv:p
             ninja:p
             SDL2:p
-            qwt:p
+            qwt-qt5:p
             qt5-base:p
             qt5-speech:p
             qt5-multimedia:p
