--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,12 @@ jobs:
 #         with:
 #           cmake-version: '3.16.x'
 
+      - name: dir
+        run: dir D:\msys64\mingw64\lib\cmake\Qt5
+        
+      - name: dir q
+        run: dir D:\msys64\mingw64\lib\cmake
+        
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake\Qt5
