--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,7 @@ jobs:
             SDL2:p
             qwt-qt5:p
             qt5-base:p
+            qt5-tools:p
             qt5-static:p
             qt5-speech:p
             qt5-multimedia:p
