--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,6 +92,9 @@ jobs:
       - name: Build
         run: cmake --build '${{github.workspace}}'/build
 
+      - name: dir p
+        run: dir '${{github.workspace}}'/build
+        
       - uses: montudor/action-zip@v1
         with:
           args: zip -qq -r AmurCore-${{ github.ref_name }}-windows.zip '${{github.workspace}}'/build
