--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
         
       - name: Configure CMake
         env:
-          CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake\Qt5
+          CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake\Qt5;D:\msys64\mingw64\lib\cmake\SDL2;D:\msys64\mingw64\lib\cmake\libconfig++;
         run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
 
       - name: Build
