--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
             cmake:p
             libconfig:p
             grpc:p
+            zlib:p
             protobuf:p
             opencv:p
             ninja:p
@@ -87,7 +88,7 @@ jobs:
         
       - name: Configure CMake
         env:
-          CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake;D:\msys64\mingw64\include 
+          CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\;D:\msys64\mingw64\lib\cmake;D:\msys64\mingw64\include;D:\msys64\mingw64\bin\;D:\msys64\mingw64\share\;
         run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
 
       - name: Build
