--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,12 +79,9 @@ jobs:
 #         uses: jwlawson/actions-setup-cmake@v1.13
 #         with:
 #           cmake-version: '3.16.x'
-        
-      - name: dir
-        run: dir D:\msys64\mingw64\
-        
-      - name: dir q
-        run: dir D:\msys64\mingw64\include
+                
+      - name: Build protocol buffers
+        run: ./${{github.workspace}}/network/protobuf/rebuild.sh
         
       - name: Configure CMake
         env:
