--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\;D:\msys64\mingw64\lib\cmake;D:\msys64\mingw64\include;D:\msys64\mingw64\bin\;D:\msys64\mingw64\share\;
-        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
+        run: cmake -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
 
       - name: Build
         run: cmake --build '${{github.workspace}}'/build
