--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,17 +95,17 @@ jobs:
           CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake;D:\msys64\mingw64\bin\;D:\msys64\mingw64\share\;
           CMAKE_INCLUDE_PATH: D:\msys64\mingw64\include
           CMAKE_LIBRARY_PATH: D:\msys64\mingw64\lib\
-        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}'/build
+        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}/build'
 
       - name: Build
-        run: cmake --build '${{github.workspace}}'/build
+        run: cmake --build '${{github.workspace}}/build'
 
       - name: dir p
-        run: dir '${{github.workspace}}'/build
+        run: dir '${{github.workspace}}/build'
         
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r AmurCore-${{ github.ref_name }}-windows.zip '${{github.workspace}}'/build
+          args: zip -qq -r AmurCore-${{ github.ref_name }}-windows.zip '${{github.workspace}}/build'
 
       - name: Release
         if: ${{ github.event.action == 'released' || github.event.action == 'prereleased' }}
