--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,14 @@ if(NOT IS_SUBPROJECT)
     endif ()
 endif()
 
+# Set default compile flags for GCC
+if(CMAKE_COMPILER_IS_GNUCXX)
+    message(STATUS "GCC detected, adding compile flags")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98 -pedantic -Wall -Wextra")
+endif(CMAKE_COMPILER_IS_GNUCXX)
+
 add_compile_options(
 #    -Werror
-
-    -Wall
-#    -Wextra
-    -Wpedantic
 
     -Wcast-align
     -Wcast-qual
