--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,19 +83,13 @@ jobs:
         
       - name: Dir libs
         run: dir D:\msys64\mingw64\lib\
-        
-      - name: Dir cmake
-        run: dir D:\msys64\mingw64\lib\cmake\
-        
-      - name: Dir include
-        run: dir D:\msys64\mingw64\include\
-        
+            
       - name: Configure CMake
         env:
           CMAKE_PREFIX_PATH: D:\msys64\mingw64\lib\cmake;D:\msys64\mingw64\bin\;D:\msys64\mingw64\share\;
           CMAKE_INCLUDE_PATH: D:\msys64\mingw64\include
           CMAKE_LIBRARY_PATH: D:\msys64\mingw64\lib\
-        run: cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}/build'
+        run: cmake -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -B '${{github.workspace}}/build'
 
       - name: Build
         run: cmake --build '${{github.workspace}}/build'
