feat: adding binding mechanism
BREAKING CHANGE:

--- a/AmurCore.cfg.in
+++ b/AmurCore.cfg.in
@@ -23,15 +23,15 @@ Amur:
          bitmask = 0x1FC3;
     };
 
-    Logic:
-    {
+#    Logic:
+#    {
 
-    };
+#    };
 
-    Network:
-    {
-        address = "176.193.245.203:7777";
-    };
+#    Network:
+#    {
+#        address = "176.193.245.203:7777";
+#    };
 
 
     Peripheral:
